fixed "about page" spacing added tag lines

--- a/resources/public/css/luckybird.less
+++ b/resources/public/css/luckybird.less
@@ -361,7 +361,7 @@ div#about {
     
         
 div#indi {
-	padding-bottom: 50px;
+	height: 330px;
 	}
     
 div {
@@ -404,13 +404,13 @@ h1 {
 	font-size: 33px;
 	line-height: 80%;
 	font-family:"Droid Serif","Ubuntu","Times New Roman";
-	margin: 0px 0px 21px 0px;
+	margin: 0px 0px 21px 30px;
 	font-weight: bold
     }
 
     
 h2 {
-	text-align: center;
+	text-align: left;
 	color: @dark-green;
 	font-size: 22px;
 	line-height: 80%;
